feat: implement status management for various entities and enhance supplier search functionality